Se decide y se agregan estilos principales de la página

--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <link rel="stylesheet" href="./CSS/reset.css">
     <link rel="stylesheet" href="./CSS/layout.css">
     <link rel="stylesheet" href="./CSS/subscribe.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
     <title>Parcial Arrón</title>
 </head>
 <body>
     <header>
         <a class="logo">
-            Arron Factories
+            Arron Factories™
         </a>
         <nav>
             <ul class="nav-items-container">
@@ -29,7 +32,7 @@
     <main>
     </main>
     <footer>
-        <p>Arron Factories 2022™. All rights reserved.</p>
+        <p>Arron Factories 2022. All rights reserved.</p>
     </footer>
 </body>
 </html>
