--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
+    <script type="module" src="./JS/subscribe.js"></script>
+    <script type="module" src="./JS/validations.js"></script>
     <title>Parcial Arrón</title>
 </head>
 <body>
