Se agregan validaciones para opciones multiples y se corrigen detalles del html y css

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <input type="checkbox" name="interes" id="tecnologia" value="Tecnologia">
                         <label for="tecnologia">Tecnologia</label>
                     </fieldset>
-                    <label id="lblinteres"></label>
+                    <label id="lblintereses"></label>
                 </div>
             </div>
             <div class="row-container">
