Ligero fix al name de elementos en el html para que funcionen validaciones

--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
                 </div>
                 <div class="input-container">
                     <fieldset>
-                        <input type="checkbox" name="interes" id="deporte" value="Deporte">
+                        <input type="checkbox" name="intereses" id="deporte" value="Deporte">
                         <label for="deporte">Deporte</label>
                     </fieldset>
                     <fieldset>
-                        <input type="checkbox" name="interes" id="musica" value="Musica">
+                        <input type="checkbox" name="intereses" id="musica" value="Musica">
                         <label for="musica">Musica</label>
                     </fieldset>
                     <fieldset>
-                        <input type="checkbox" name="interes" id="juegos" value="Juegos">
+                        <input type="checkbox" name="intereses" id="juegos" value="Juegos">
                         <label for="juegos">Juegos</label>
                     </fieldset>
                     <fieldset>
-                        <input type="checkbox" name="interes" id="tecnologia" value="Tecnologia">
+                        <input type="checkbox" name="intereses" id="tecnologia" value="Tecnologia">
                         <label for="tecnologia">Tecnologia</label>
                     </fieldset>
                     <label id="lblintereses"></label>
