--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
         </div>
         <form id="subscribe-form">
-            <h1>Subscribe for free!</h1>
+            <h1>Suscribite gratis!</h1>
             <div class="row-container">
                 <div class="input-container">
                     <input id="name" type="text" placeholder="Nombre">
